bind quest detail to corresponding fragment

--- a/app/src/main/res/layout/fragment_quest_detail.xml
+++ b/app/src/main/res/layout/fragment_quest_detail.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.questDetail.QuestDetail">
+    tools:context=".ui.questDetail.QuestDetailFragment">
 
-    <include layout="@layout/quest_detail" />
+    <include
+        android:id = "@+id/include_quest_detail"
+        layout="@layout/quest_detail" />
 
 </FrameLayout>
