--- a/app/src/main/res/layout/quest_publish_form.xml
+++ b/app/src/main/res/layout/quest_publish_form.xml
@@ -38,9 +38,12 @@
                         app:counterMaxLength="30">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id = "@+id/title"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Title" />
+                            android:hint="Title"
+                            />
+
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <!-- Content -->
@@ -51,6 +54,7 @@
                         app:counterMaxLength="400">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id = "@+id/content"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="Content" />
@@ -68,6 +72,21 @@
 <!--                        android:layout_marginBottom="8dp"/>-->
 
                     <!-- Contact Methods -->
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:counterEnabled="true"
+                        app:counterMaxLength="30">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id = "@+id/reward"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="Reward"
+                            android:text = "Gratitude"/>
+                    </com.google.android.material.textfield.TextInputLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
